# xai-sverl

./: Cargo.toml  README.md  TUTORIAL.md  index.html  xai-sverl.js  xai-sverl.wasm
.github/workflows/: deploy.yml
assets/: config.toml
src/: main.rs
src/state/: mod.rs
src/tictactoe/: mod.rs  policy.rs  shapley.rs  sverl.rs
